--- a/doc/tutorial.adoc
+++ b/doc/tutorial.adoc
@@ -248,8 +248,8 @@ The JSON fields can be selected using SQL:
 SELECT __id,
        __start,
        id,
-       jsondata #>> '{groupname}' AS groupname,
-       jsondata #>> '{description}' AS description
+       jsonb_extract_path_text(jsondata, 'groupname') AS groupname,
+       jsonb_extract_path_text(jsondata, 'description') AS description
     FROM library.patrongroup;
 ----
 
