doc: update software requirements

--- a/doc/serveradmin.adoc
+++ b/doc/serveradmin.adoc
@@ -16,11 +16,8 @@
 
 ==== Software requirements
 
-* Operating system: Debian 11 or later
+* Operating system: https://www.debian.org[Debian] 12 or later
 * https://www.postgresql.org/[PostgreSQL] 15 or later
-** PostgreSQL 15.3 or later is recommended
-** AWS RDS PostgreSQL optionally may be used (with servers in the same
-   zone/subnet); Aurora is not supported
 * Required to build from source:
 ** https://golang.org/[Go] 1.20 or later
 ** goyacc (installation instructions below)
