doc: add -X flag to psql example

--- a/doc/serveradmin.adoc
+++ b/doc/serveradmin.adoc
@@ -214,7 +214,7 @@ The PostgreSQL terminal client, `psql`, can be used to connect to the Metadb
 server:
 
 ----
-psql -h localhost -p 8440
+psql -h localhost -p 8440 -X
 ----
 
 Connections are accepted only from `localhost`.
