--- a/doc/serveradmin.adoc
+++ b/doc/serveradmin.adoc
@@ -102,7 +102,8 @@ systemuser_password = _password of systemuser_
 sslmode = _should be set to "require" or stronger option_
 ----
 
-The database name should be `metadb` or should begin with `metadb_`.
+Metadb expects the database name to be `metadb` or to begin with `metadb_`;
+otherwise it logs a warning message.
 
 This file should be edited to add database connection parameters, for example:
 
