--- a/doc/reference.adoc
+++ b/doc/reference.adoc
@@ -25,7 +25,7 @@ This table summarizes the type adjustments that are performed:
 ^|*To numeric*
 ^|*To uuid*
 ^|*To jsonb*
-^|*To varchar*
+^|*To text*
 
 |From boolean
 |
@@ -117,7 +117,7 @@ This table summarizes the type adjustments that are performed:
 |
 |✅
 
-|From varchar
+|From text/varchar
 |
 |✅
 |
