--- a/doc/userguide.adoc
+++ b/doc/userguide.adoc
@@ -426,15 +426,17 @@ CREATE FUNCTION lisa.count_loans(
     end_date date DEFAULT '2050-01-01')
 RETURNS TABLE(
     item_id uuid,
-    loan_count integer) AS
-$$
+    loan_count integer)
+AS $$
 SELECT item_id,
        count(*) AS loan_count
     FROM folio_circulation.loan__t
     WHERE start_date <= loan_date AND loan_date < end_date
     GROUP BY item_id
 $$
-LANGUAGE SQL;
+LANGUAGE SQL
+STABLE
+PARALLEL SAFE;
 ----
 
 Now the function can be called with different arguments to generate reports:
